--- a/web.config
+++ b/web.config
@@ -1,13 +1,19 @@
 <configuration>
-    <system.webServer>
-        <handlers>
-            <add name="FlaskFastCgi" path="*" verb="*" modules="FastCgiModule" scriptProcessor="D:\home\Python364x64\python.exe|D:\home\Python364x64\wfastcgi.py" resourceType="Unspecified" requireAccess="Script" />
-        </handlers>
-    </system.webServer>
-
-    <appSettings>
-        <add key="WSGI_HANDLER" value="untitled9.wsgi_app()" />
-        <add key="PYTHONPATH" value="D:\home\site\wwwroot" />
-        <add key="WSGI_LOG" value="D:\home\LogFiles\wfastcgi.log" />
-    </appSettings>
+  <system.webServer>
+    <handlers>
+      <add name="FlaskHandler" path="*" verb="*" modules="FastCgiModule" scriptProcessor="D:\home\python364x64\python.exe|D:\home\python364x64\wfastcgi.py" resourceType="Unspecified" requireAccess="Script"/>
+    </handlers>
+    <rewrite>
+      <rules>
+        <rule name="Flask" patternSyntax="Wildcard">
+          <match url="*"/>
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="True"/>
+          </conditions>
+          <action type="Rewrite" url="untitled9.py"/>
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
